--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>atmosphere-emitter</artifactId>
     <packaging>war</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>atmosphere-atmospherehandler-pubsub</name>
+    <name>atmosphere-emitter</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
